===================================
Smartline Lite Changelog
===================================

Version 1.1.2
-----------------------------------
[added] check if current user can edit theme options before displaying admin notices on frontend

Version 1.1.1
-----------------------------------
[added] setting for deactivating google fonts in case they are not compatible with user language
[fixed] ampersand escape bug in pagination links (https://core.trac.wordpress.org/ticket/30831)
[fixed] wrong textdomain in content-search.php

Version 1.1
-----------------------------------
[improved] styling of blockquotes
[updated] to Genericon Font 3.3 and added new twitch and spotify icons
[added] extra content-search.php template for search
[changed] appearance of static pages on search template

Version 1.0.9
-----------------------------------
[added] setting to Category Posts widgets to link widget title to category archive page
[added] small posts grid layout style to Category Posts Grid widget
[added] number of posts and highlighting first post option to Category Post Columns widget
[added] unminified version of html5shiv.min.js and jquery.flexslider-min.js
[fixed] missing line spaces in paragraph styling of blockquotes

Version 1.0.8
-----------------------------------
[fixed] cache reset bug of Category Posts widgets by changing from transient caching to object caching
[changed] responsive design of header area (center alignment on mobile devices)

Version 1.0.7
-----------------------------------
[added] sane defaults for widget settings
[improved] performance of Category Posts widgets by adding transient caching
[updated] smartline-lite.pot language file

Version 1.0.6
-----------------------------------
[added] theme option to display excerpt more text
[changed] implementation of loading default Google Fonts
[changed] implementation of menu icons for mobile navigation
[fixed] line height bug for pre and code HTML tags
[fixed] missing translations

Version 1.0.5