@@ -213,9 +213,27 @@ class Smartline_Category_Posts_Boxed_Widget extends WP_Widget {
 			// Link Category Title
 			if( $category_link == true ) : 
 			
-				$link_title = sprintf( __('View all posts from category %s', 'smartline-lite'), get_cat_name( $category ) );
-				$link_url = esc_url( get_category_link( $category ) );
+				// Check if "All Categories" is selected
+				if( $category == 0 ) :
 				
+					$link_title = __('View all posts', 'smartline-lite');
+					
+					// Set Link URL to always point to latest posts page
+					if ( get_option( 'show_on_front' ) == 'page' ) :
+						$link_url = esc_url( get_permalink( get_option('page_for_posts' ) ) );
+					else : 
+						$link_url =	esc_url( home_url('/') );
+					endif;
+					
+				else :
+					
+					// Set Link URL and Title for Category
+					$link_title = sprintf( __('View all posts from category %s', 'smartline-lite'), get_cat_name( $category ) );
+					$link_url = esc_url( get_category_link( $category ) );
+					
+				endif;
+				
+				// Display linked Widget Title
 				echo '<a href="'. $link_url .'" title="'. $link_title . '">'. $widget_title . '</a>';
 				echo '<a class="category-archive-link" href="'. $link_url .'" title="'. $link_title . '"><span class="genericon-next"></span></a>';
 			
